@@ -7,6 +7,7 @@ ver 0.5.0
 - Changed the format of gui_config.json
 - Fixed a bug that help menu will be shown even if the size of ["help"] is zero.
 - Fixed an error when the size of ["gui"] is zero.
+- Fixed a GTK warning about component sizes.
 - Removed more codes from wxWidgets.
 - Applied optimazation for objective-c++ files.
 - Applied link time optimization.
